applications/backstage/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: backstage
          image: zot.homelab.kszpakowski.com/backstage:sha-a15212a7edec7a9024931b7579d1b555c83494d1
          ports:
            - name: http
              containerPort: 7007
          startupProbe:
            httpGet:
              path: /.backstage/health/v1/readiness
              port: http
            periodSeconds: 10
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /.backstage/health/v1/readiness
              port: http
          livenessProbe:
            httpGet:
              path: /.backstage/health/v1/liveness
              port: http
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
