applications/backstage/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: backstage.homelab.kszpakowski.com
spec:
  ingressClassName: traefik
  rules:
    - host: backstage.homelab.kszpakowski.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage
                port:
                  name: http
  tls:
    - secretName: backstage-cert
      hosts:
        - backstage.homelab.kszpakowski.com
